--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p>This is my app!  </p>
-    <p>Log in form</p>
+    <h1>Login Stuff here</h1>
 </body>
 </html>
